version 0.8.1+
	* Support subclassing of Task

version 0.8.1 Tue Jul 5 2011 by luispedro
	* Fix redis backend for new version of client module
	* Faster file store for large files
	* Fix `invalidate` with Tasklets
	* Install tests and have them be runnable
	* Changed hash computation method. This has a special case on numpy arrays
	(for speed) and is more extensible through a __jug_hash__ hook
	* Fix bug with Tasklet dependencies not being properly taken into account
	* Fix shell subcommand in newer versions of ipython
	* Add __file__ attribute to fake jugmodule

version 0.8 Sun Mar 27 2011 by luispedro
	* Tasklets
	* Fix bug in sleep-until
	* Fix bug in cleanup
	* Fix bug in status with --cache options (was non functional)
	* Fix bug in CompoundTask (you needed to run jug execute twice before)

version 0.7.4 Sun Jan 16 2011 by luispedro
	* Fix case where ~/.jug/configrc does not exist
	* Print host name to lock file on file_store
	* Refactored implementation of options
	* Fix unloading tasks that have not run
	* Fix mapreduce for empty input

version 0.7.3 Tue Jan 4 2011 by luispedro
	* Parse ~/.jug/configrc
	* Fix bug with waiting times
	* Special case saving of numpy arrays
	* Add more expressive jugdir syntax
	* Save dict_store backend to disk

version 0.7.2 Wed Nov 3 2010 by luispedro
	* Add missing files to distribution

version 0.7.1 Mon Nov 2 2010 by luispedro
	* sleep-until subcommand
	* Fix for barrier() and mapreduce interaction
	* Documentation improvement

version 0.7 by luispedro
	* `barrier()`
	* better ``shell`` command
	* Rewrote method for loading jugfiles
	* Tasks have original function accessible as `f`

version 0.6.1 Mon Sep 13 2010 by luispedro
	* New check command
	* load_all() inside shell

version 0.5.5-git Wed May 5 2010 by luispedro
	* New cached status subcommand. Much faster.

version 0.5.3 Mon Apr 26 2010 by luispedro
	* New backend compression methods

version 0.5.2 Tue Mar 30 2010 by luispedro
	* New `shell` command