@@ -1,5 +1,6 @@
 version 0.8.1+
 	* Support subclassing of Task
+	* Avoid creating directories in file backend unless it is necessary
 
 version 0.8.1 Tue Jul 5 2011 by luispedro
 	* Fix redis backend for new version of client module
